Fix overflow of source code blocks in the footnotes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -737,6 +737,9 @@ ol > ul {
   display: table-cell;
   font-size: 16px;
 }
+#text-footnotes .footdef > .footpara > div.org-src-container {
+  display: grid;
+}
 
 /**
  * Trick for LLM bots
